[package]
name = "bevyjam23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [ "mp3" ]}
log = { version = "0.4.20", features = ["release_max_level_off"] }
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
incremental = true

[target.'cfg(not(target_arch="wasm32"))'.profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_arch="wasm32")'.profile.dev.package."*"]
opt-level = 'z'

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
prefer-dynamic = false

# [profile.release]
# lto = true
# codegen-units = 1
